[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Directional association.gd" type="Script" id=1]
[ext_resource path="res://Theme/MinimalUI.tres" type="Theme" id=2]
[ext_resource path="res://Interface/Entity Chooser.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Success"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 1, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Success (copy)"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Directional Association" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.1
anchor_right = 0.9
anchor_bottom = 1.0
margin_left = -0.199997
margin_right = 4.20001
margin_bottom = -3.0

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_left = 0.2
anchor_right = 0.8
anchor_bottom = 1.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer2"]
margin_right = 609.0
margin_bottom = 4.0

[node name="Label" type="Label" parent="VBoxContainer2"]
margin_top = 8.0
margin_right = 609.0
margin_bottom = 31.0
size_flags_vertical = 0
text = "Generate an association from:"
align = 1
autowrap = true

[node name="PickFrom" parent="VBoxContainer2" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 35.0
margin_right = 609.0
margin_bottom = 163.0
size_flags_vertical = 3

[node name="EntityLab" type="Label" parent="VBoxContainer2"]
margin_top = 167.0
margin_right = 609.0
margin_bottom = 242.0
size_flags_vertical = 0
text = "
To:
"
align = 1
autowrap = true

[node name="PickTo" parent="VBoxContainer2" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 246.0
margin_right = 609.0
margin_bottom = 375.0
size_flags_vertical = 3

[node name="Label3" type="Label" parent="VBoxContainer2"]
margin_top = 379.0
margin_right = 609.0
margin_bottom = 402.0
text = "With Description:"
align = 1

[node name="Description" type="TextEdit" parent="VBoxContainer2"]
margin_top = 406.0
margin_right = 609.0
margin_bottom = 535.0
size_flags_vertical = 3
text = "i8uiuiuiui"
wrap_enabled = true
caret_block_mode = true

[node name="GoButt" type="Button" parent="VBoxContainer2"]
margin_top = 539.0
margin_right = 609.0
margin_bottom = 564.0
text = "GO!"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/Success = SubResource( 3 )
"anims/Success (copy)" = SubResource( 4 )

[connection signal="found_entity" from="VBoxContainer2/PickFrom" to="." method="_on_PickFrom_found_entity"]
[connection signal="found_entity" from="VBoxContainer2/PickTo" to="." method="_on_PickTo_found_entity"]
[connection signal="pressed" from="VBoxContainer2/GoButt" to="." method="_on_GoButt_pressed"]
